--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SERVER_URL='https://doodle-thing.herokuapp.com/'
-REACT_APP_SERVER_CANVAS_DATA_ROUTE='canvas/'
+REACT_APP_SERVER_CANVAS_DATA_ROUTE='canvas'
